Finalize genetics and write first 2 analitics
