# server/docs/swagger.json
@@ -15,9 +15,84 @@
         },
         "version": "1.0"
     },
-    "host": "localhost",
+    "host": "genmilk.ru",
     "basePath": "/api",
     "paths": {
+        "/analitics/genotyped/years": {
+            "get": {
+                "description": "Возращает словарь год - количеств генотипированных коров, по ключу -1 генотипированные за все годы",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Analitics"
+                ],
+                "summary": "Get list of years",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {}
+                        }
+                    }
+                }
+            }
+        },
+        "/analitics/genotyped/{year}/regions": {
+            "get": {
+                "description": "Возращает словарь регион - количество живых коров, количество генотипированных",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Analitics"
+                ],
+                "summary": "Get list of years",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "год за который собирается статистика",
+                        "name": "year",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {}
+                        }
+                    }
+                }
+            }
+        },
         "/breeds": {
             "get": {
                 "description": "Возращает список всех пород. Разрешает отсутсвие фильтров",
@@ -609,6 +684,36 @@
                 }
             }
         },
+        "/monogenetic_illnesses": {
+            "get": {
+                "description": "Возращает список генетических заболеваний",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "MonogeneticIllnessses"
+                ],
+                "summary": "Get list of monogenetic illnesses",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.GeneticIllness"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {}
+                        }
+                    }
+                }
+            }
+        },
         "/regions": {
             "get": {
                 "description": "Возращает все регионы",
@@ -752,11 +857,18 @@
                     "type": "boolean",
                     "example": true
                 },
+                "genotypingDate": {
+                    "$ref": "#/definitions/models.DateOnly"
+                },
                 "id": {
                     "type": "integer",
                     "example": 123
                 },
                 "inbrindingCoeffByFamily": {
+                    "type": "number",
+                    "example": 3.14
+                },
+                "inbrindingCoeffByGenotype": {
                     "type": "number",
                     "example": 3.14
                 },
@@ -769,6 +881,12 @@
                 "inventoryNumber": {
                     "type": "string",
                     "example": "321"
+                },
+                "monogeneticIllneses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.GeneticIllness"
+                    }
                 },
                 "name": {
                     "type": "string",
@@ -1003,12 +1121,12 @@
                     "default": 3.14
                 },
                 "genotypingDateFrom": {
-                    "description": "??? Не реализован",
+                    "description": "фильтр по дате генотипирования ОТ",
                     "type": "string",
                     "example": "1800-01-21"
                 },
                 "genotypingDateTo": {
-                    "description": "??? Не реализован",
+                    "description": "фильтр по дате генотипирования ДО",
                     "type": "string",
                     "example": "2800-01-21"
                 },
@@ -1018,22 +1136,22 @@
                     "example": 1
                 },
                 "inbrindingCoeffByFamilyFrom": {
-                    "description": "Не реализован",
+                    "description": "фильтр по коэф. инбриндинга по роду ОТ",
                     "type": "number",
                     "default": 3.14
                 },
                 "inbrindingCoeffByFamilyTo": {
-                    "description": "Не реализован",
+                    "description": "фильтр по коэф. инбриндинга по роду ДО",
                     "type": "number",
                     "default": 3.14
                 },
-                "inbrindingCoeffByFenotypeFrom": {
-                    "description": "?Не реализован",
+                "inbrindingCoeffByGenotypeFrom": {
+                    "description": "фильтр по коэф. инбриндинга по генотипу ОТ",
                     "type": "number",
                     "default": 3.14
                 },
-                "inbrindingCoeffByFenotypeTo": {
-                    "description": "?Не реализован",
+                "inbrindingCoeffByGenotypeTo": {
+                    "description": "фильтр по коэф. инбриндинга по генотипу ДО",
                     "type": "number",
                     "default": 3.14
                 },
@@ -1073,7 +1191,7 @@
                     "default": false
                 },
                 "monogeneticIllneses": {
-                    "description": "?Не реализован",
+                    "description": "ID ген. заболеваний их /api/mongenetic_illnesses",
                     "type": "array",
                     "items": {
                         "type": "integer"
